--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -20,24 +20,40 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 ---
-name: sonarcloud
+name: sonar
 on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
-    paths-ignore: [ 'paper/**', 'sandbox/**' ]
-    types: [ opened, synchronize, reopened ]
+concurrency:
+  group: sonar-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
-  sonarcloud:
+  sonar:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: SonarSource/sonarcloud-github-action@master
-        env:
+      - uses: teatimeguest/setup-texlive-action@v3.2.1
+        with:
+          update-all-packages: true
+          packages: scheme-basic geometry xcolor naive-ebnf microtype etoolbox
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 20
+          distribution: 'zulu'
+      - uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn --batch-mode install -Dinvoker.skip org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Pjacoco -Dsonar.java.source=1.8 -Dsonar.qualitygate.wait=true
