--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@ SOFTWARE.
     <argLine/>
     <!-- This is the size of the stack, which you can modify from command line -->
     <stack-size>256M</stack-size>
-    <sonar.projectKey>c71n93_eo</sonar.projectKey>
+    <sonar.projectKey>c71n93_eo:${project.name}</sonar.projectKey>
     <sonar.organization>c71n93</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <antlr.version>4.13.1</antlr.version>
