--- a/pom.xml
+++ b/pom.xml
@@ -92,8 +92,8 @@ SOFTWARE.
     <argLine/>
     <!-- This is the size of the stack, which you can modify from command line -->
     <stack-size>256M</stack-size>
-    <sonar.projectKey>com.objectionary:${project.name}</sonar.projectKey>
-    <sonar.organization>objectionary</sonar.organization>
+    <sonar.projectKey>c71n93_eo:${project.name}</sonar.projectKey>
+    <sonar.organization>c71n93</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <antlr.version>4.13.1</antlr.version>
   </properties>
